--- a/package.json
+++ b/package.json
@@ -25,5 +25,7 @@
         "url": "https://github.com/reactnativecn/react-native-weibo/issues"
     },
     "homepage": "https://github.com/reactnativecn/react-native-weibo#readme",
-    "dependencies": {}
+    "dependencies": {
+        "bluebird": "^3.5.0"
+    }
 }
