--- a/package.json
+++ b/package.json
@@ -25,7 +25,5 @@
         "url": "https://github.com/reactnativecn/react-native-weibo/issues"
     },
     "homepage": "https://github.com/reactnativecn/react-native-weibo#readme",
-    "dependencies": {
-        "es6-promisify": "5.0.0"
-    }
+    "dependencies": {}
 }
