升级到3.1.4，解决分析无法工作的问题

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:allowBackup="true"
         >
-        <meta-data android:name="WB_APPID" android:value="${WB_APPID}" />
+        <meta-data android:name="WB_APPID" android:value="wb1298065066" />
         <activity android:name="com.sina.weibo.sdk.component.WeiboSdkBrowser"
             android:configChanges="keyboardHidden|orientation"
             android:windowSoftInputMode="adjustResize"
