--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "25.0.0"
 
     defaultConfig {
         minSdkVersion 16
@@ -22,6 +22,6 @@ android {
 }
 
 dependencies {
+    compile fileTree(dir: "libs", include: ["*.jar"])
     compile 'com.facebook.react:react-native:+'
-    compile files('libs/weiboSDKCore_3.1.2.jar')
 }
